# app-down

./: .gitignore  README.md  pyproject.toml  sample-urls.txt
appdown/: __main__.py  checker.py  cli.py
