[tool.poetry]
name = "appdown"
version = "0.1.0"
description = ""
authors = ["Oliver Arthur <OliverArthur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
